se me olvido actualizar el index, la puta que te remil pario

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: landing
     <h2>{{ site.title }}</h2>
     <p>{{ site.description | markdownify }}</p>
   </div>
-  <a href="#intro" class="more scrolly">Details</a>
+  <a href="#intro" class="more scrolly">Los Detalles</a>
 </section>
 
 <section id="intro" class="wrapper style1 special">
@@ -25,13 +25,13 @@ layout: landing
   {% include sections/location.html %}
 </section>
 
-<section id="lodging" class="wrapper style2 special">
+<!--<section id="lodging" class="wrapper style2 special">
   {% include sections/lodging.html %}
-</section>
+</section>-->
 
-<section id="party" class="wrapper style1 special">
+<!--<section id="party" class="wrapper style1 special">
   {% include sections/weddingparty.html %}
-</section>
+</section>-->
 
 <section id="registry" class="wrapper style3 special">
   {% include sections/registry.html %}
