--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ comments: true
   {% include sections/rsvp.html %}
 </section>
 
-<section id="couple" class="wrapper alt style2">
+<section id="couple" class="wrapper alt style2" padding-left: 2cm; padding-right: 2cm>
 
 {% if page.comments %}
 
