Try width again lpqlrmp

--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@ comments: true
   {% include sections/rsvp.html %}
 </section>
 
-<section id="couple" class="wrapper alt style2" width: 75%>
+<section id="couple" class="wrapper alt style2">
 
 {% if page.comments %}
 
-<div id="disqus_thread"></div>
+<div id="disqus_thread"; width: 75%></div>
 <script>
 
 /**
