revert last change la concha de la lora

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ comments: true
   {% include sections/rsvp.html %}
 </section>
 
-<section id="location" class="wrapper style4">
+<section id="couple" class="wrapper alt style2">
 
 {% if page.comments %}
 
