--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ comments: true
 
 {% if page.comments %}
 
-<div id="disqus_thread"; width: 75%></div>
+<div id="disqus_thread" padding-left: 20px;></div>
 <script>
 
 /**
